@@ -1,1 +1,5 @@
+2007-05-24 Felipe Contreras <felipe.contreras@gmail.com>
+
+	* New get_type method
+
 == release 0.1.0 ==
